FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(SignedDistanceFont ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(SignedDistanceFont ${Vulkan_LIBRARIES} vkcommon SDL2)
ADD_DEPENDENCIES(SignedDistanceFont vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(SignedDistanceFont PRIVATE ${Vulkan_INCLUDE_DIRS} )
