FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(GameOfLife ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(GameOfLife ${Vulkan_LIBRARIES} vkcommon SDL2)
ADD_DEPENDENCIES(GameOfLife vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(GameOfLife PRIVATE ${Vulkan_INCLUDE_DIRS} )
