FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Instance ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(Instance ${Vulkan_LIBRARIES} vkcommon )
ADD_DEPENDENCIES(Instance vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(Instance PRIVATE ${Vulkan_INCLUDE_DIRS} )




## Generate the SPV object
