FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Mandelbrot ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(Mandelbrot ${Vulkan_LIBRARIES} vkcommon)
ADD_DEPENDENCIES(Mandelbrot vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(Mandelbrot PRIVATE ${Vulkan_INCLUDE_DIRS} )




## Generate the SPV object
