FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ReactionDiffusion ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(ReactionDiffusion ${Vulkan_LIBRARIES} vkcommon SDL2)
ADD_DEPENDENCIES(ReactionDiffusion vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(ReactionDiffusion PRIVATE ${Vulkan_INCLUDE_DIRS} )
