FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(RenderHeadless ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(RenderHeadless ${Vulkan_LIBRARIES} vkcommon )
ADD_DEPENDENCIES(RenderHeadless vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(RenderHeadless PRIVATE ${Vulkan_INCLUDE_DIRS} )
