FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(SilhouetteDetection ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(SilhouetteDetection ${Vulkan_LIBRARIES} vkcommon)
ADD_DEPENDENCIES(SilhouetteDetection vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(SilhouetteDetection PRIVATE ${Vulkan_INCLUDE_DIRS} )
