FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(StartUpWindow ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(StartUpWindow ${Vulkan_LIBRARIES} vkcommon )
ADD_DEPENDENCIES(StartUpWindow vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(StartUpWindow PRIVATE ${Vulkan_INCLUDE_DIRS} )
