FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(StencilShadowVolume ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(StencilShadowVolume ${Vulkan_LIBRARIES} vkcommon)
ADD_DEPENDENCIES(StencilShadowVolume vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(StencilShadowVolume PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
