FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Triangle ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(Triangle ${Vulkan_LIBRARIES} vkcommon SDL2)
ADD_DEPENDENCIES(Triangle vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(Triangle PRIVATE ${Vulkan_INCLUDE_DIRS} )




## Generate the SPV object
