FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(VarianceShadowMap ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(VarianceShadowMap ${Vulkan_LIBRARIES} vkcommon SDL2)
ADD_DEPENDENCIES(VarianceShadowMap vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(VarianceShadowMap PRIVATE ${Vulkan_INCLUDE_DIRS} )
