FILE(GLOB VKS_CORE_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Core/*.cpp)
FILE(GLOB VKS_CORE_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Core/*.h )

FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(vkcommon-core ${VKS_CORE_SOURCE_FILES} ${VKS_CORE_HEADER_FILES})
TARGET_LINK_LIBRARIES(vkcommon-core PUBLIC ${Vulkan_LIBRARIES} fmt)

ADD_LIBRARY(vkcommon ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(vkcommon PUBLIC ${Vulkan_LIBRARIES} fmt ${SDL2_LIBRARIES} vkcommon-core )

# Vulkan dependencies headers.
TARGET_INCLUDE_DIRECTORIES(vkcommon-core PRIVATE ${Vulkan_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/Core
    PUBLIC     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Core )
TARGET_INCLUDE_DIRECTORIES(vkcommon PRIVATE ${Vulkan_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(TARGETS vkcommon-core vkcommon DESTINATION lib)