FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(ParticleSystem ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(ParticleSystem ${Vulkan_LIBRARIES} vkcommon SDL2)
ADD_DEPENDENCIES(ParticleSystem vkcommon)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(ParticleSystem PRIVATE ${Vulkan_INCLUDE_DIRS} )

## Generate the SPV object
