FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(GameOfLife ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(GameOfLife ${Vulkan_LIBRARIES} vk-sample-common )
ADD_DEPENDENCIES(GameOfLife vk-sample-common)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(GameOfLife PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
