FILE(GLOB SOURCE_MANDELBROT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_MANDELBROT_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Mandelbrot ${SOURCE_MANDELBROT_FILES} ${HEADER_MANDELBROT_FILES})
TARGET_LINK_LIBRARIES(Mandelbrot vk-sample-common)
ADD_DEPENDENCIES(Mandelbrot vk-sample-common)

TARGET_INCLUDE_DIRECTORIES(Mandelbrot PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS Mandelbrot DESTINATION bin)