FILE(GLOB SOURCE_MEMORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_MEMORY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(MemoryTransfer ${SOURCE_MEMORY_FILES} ${HEADER_MEMORY_FILES})
TARGET_LINK_LIBRARIES(MemoryTransfer vk-sample-common)
ADD_DEPENDENCIES(MemoryTransfer vk-sample-common)

TARGET_INCLUDE_DIRECTORIES(MemoryTransfer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS MemoryTransfer DESTINATION bin)