FILE(GLOB SOURCE_NORMAL_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_NORMAL_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Normal ${SOURCE_NORMAL_FILES} ${HEADER_NORMAL_FILES})
TARGET_LINK_LIBRARIES(Normal vk-sample-common)
ADD_DEPENDENCIES(Normal vk-sample-common)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(Normal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS Normal DESTINATION bin)