FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(PNTessellation ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(PNTessellation vk-sample-common )
ADD_DEPENDENCIES(PNTessellation vk-sample-common)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(PNTessellation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
