FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Panoramic ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(Panoramic vk-sample-common )
ADD_DEPENDENCIES(Panoramic vk-sample-common)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(Panoramic PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )


INSTALL(TARGETS Panoramic DESTINATION bin)