FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(PushConstant ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(PushConstant vk-sample-common )
ADD_DEPENDENCIES(PushConstant vk-sample-common)

# Vulkan dependies headers.
TARGET_INCLUDE_DIRECTORIES(PushConstant PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )


INSTALL(TARGETS PushConstant DESTINATION bin)